Bug 120888 - Toggling undocked Navigator from page number field causes toggle off and and then back on
Summary: Toggling undocked Navigator from page number field causes toggle off and and ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.6.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2018-10-25 00:24 UTC by Jim Raykowski
Modified: 2019-09-22 14:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-10-25 00:24:38 UTC
Steps to reproduce:

1) Open Writer
2) Open Navigator - Menu > View > Navigator or F5
3) Undock Navigator if needed - <ctrl><shift>+F10
4) Click in page number field
5) Press F5 or whatever shortcut key is assigned to Navigator

Results: Navigator toggles off and then back on. On my really slow machine I see this happen. Faster computers will just be a flash.

Reproduced in: 

Version 5.1.6.2
Build ID: 1:5.1.6~rc2~0ubuntu1~xenial4
CPU threads: 1; OS: Linux 4.4; UI render: default; 
Locale: en-US (en_US.UTF-8); Calc: group

and later

I will provide a patch on confirmation
Comment 1 Dieter 2018-10-25 06:28:41 UTC
I confirm this with

Version: 6.0.6.2 (x64)
Build-ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 2 Commit Notification 2018-10-26 05:15:01 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb74df3f1e9feca233cec19e9ade86cd9dbcf195

tdf#120888 Use event notify result

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dieter 2019-09-21 12:17:19 UTC
Result in

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

F5 opens a second navigator. If you click again in page number field and press F5, second window disappears. Jim, is this the desired result?
Comment 4 Jim Raykowski 2019-09-22 06:52:15 UTC
(In reply to Dieter Praas from comment #3)
 
> F5 opens a second navigator. If you click again in page number field and
> press F5, second window disappears. Jim, is this the desired result?

Hi Dieter,

The second navigator is the floating window navigator aka 'F5 navigator'. The navigator in the sidebar is the same but lives in the sidebar instead of being it's own window like the floating window navigator. F5 toggles the floating window navigator on and off and behaves the same from any place in the sidebar I believe.
Comment 5 Dieter 2019-09-22 14:27:55 UTC
(In reply to Jim Raykowski from comment #4)
> Hi Dieter,
> 
> The second navigator is the floating window navigator aka 'F5 navigator'.
> The navigator in the sidebar is the same but lives in the sidebar instead of
> being it's own window like the floating window navigator. F5 toggles the
> floating window navigator on and off and behaves the same from any place in
> the sidebar I believe.

Hi Jim, thanks for quick answer. So everything works as expected I think. => VERIFIED FIXED