tdf#120888 Use event notify result

Change-Id: Ic85f7182b66f9f5c31b612e5a93299496e874fc0
Reviewed-on: https://gerrit.libreoffice.org/62381
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>